--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </div>
     </div>
     <audio id="start">
-        <source src="/start.mp3" type="audio/mpeg">
+        <source src="https://github.com/Charleywang246/human-match-ui/blob/main/start.mp3" type="audio/mpeg">
     </audio>
     <audio id="end">
-        <source src="/end.mp3" type="audio/mpeg">
+        <source src="https://github.com/Charleywang246/human-match-ui/blob/main/end.mp3" type="audio/mpeg">
     </audio>
     <script>
         countdown = false
