--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
                     document.getElementById('o').innerText = 0
                     document.getElementById('p').innerText = 0
                     break
+                case "q":
+                    document.getElementById("a").innerText = 0;
+                    break;
+                case "o":
+                    document.getElementById("b").innerText = 0;
+                    break;
             }
         })
     </script>
