--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
                     b.innerText = 10
                     break
                 case "s":
-                    if (Number(document.getElementById('a').innerText)>0) {
+                    if (Number(document.getElementById('time').innerText) >= 135) {
+                        document.getElementById("c").innerText = Number(document.getElementById("c").innerText) + 5
+                    }
+                    if (Number(document.getElementById('a').innerText) > 0) {
                         document.getElementById("c").innerText = Number(document.getElementById("c").innerText) + 5
                         document.getElementById("k").innerText = Number(document.getElementById("k").innerText) + 1
                     } else {
@@ -160,7 +163,10 @@
                     }
                     break
                 case "k":
-                    if (Number(document.getElementById('b').innerText)>0) {
+                    if (Number(document.getElementById('time').innerText) >= 135) {
+                        document.getElementById("d").innerText = Number(document.getElementById("d").innerText) + 5
+                    }
+                    if (Number(document.getElementById('b').innerText) > 0) {
                         document.getElementById("d").innerText = Number(document.getElementById("d").innerText) + 5
                         document.getElementById("n").innerText = Number(document.getElementById("n").innerText) + 1
                     } else {
